Update overflow bug

--- a/style.css
+++ b/style.css
@@ -50,9 +50,10 @@
      padding: 10px;
      margin: 5px;
      border-radius: 2px;
-     transition: 0.8s ease;
+     transition: 0.6s ease;
      display: inline-block;
      font-size: 14px;
+     border-bottom: 2px solid transparent;
     }
 
     .og_button {
@@ -114,6 +115,8 @@
     #toggle {
      transition: 0.8s ease-in-out;
      cursor: pointer;
+     color: white !important;
+
     }
 
     @media (max-width:744px) {
@@ -236,10 +239,14 @@
      margin: 0 auto;
     }
 
+    .intro a {
+     font-size: 16px;
+    }
+
     @media screen and (max-width: 764px) {
 
      .intro {
-      width: 100%;
+      width: 90%;
       margin: 0 auto;
      }
     }
@@ -313,7 +320,7 @@
      min-height: 300px;
      transition: all 0.5s ease;
      cursor: pointer;
-     padding: 2em 0.45em;
+     padding: 2rem 0;
      width: 100%;
     }
 
@@ -383,6 +390,8 @@
 
     .design_card .img img {
      width: 100%;
+     border-top-right-radius: 20px;
+     border-top-left-radius: 20px;
     }
 
     .design_card .content {
@@ -394,7 +403,7 @@
     }
 
     .design_card .content p {
-     font-size: 18px;
+     font-size: 16px;
      color: #5f646d;
     }
 
@@ -432,7 +441,7 @@
     }
 
     .top_nav .brand span {
-     display: block;
+     display: inline;
     }
 
     .menu-overlay {
@@ -511,7 +520,7 @@
      }
 
      .og_container .wrapper p {
-      font-size: 18px;
+      font-size: 16px;
       margin-bottom: 1.5rem;
      }
 
